--- a/app/src/main/res/layout/dang_nhap.xml
+++ b/app/src/main/res/layout/dang_nhap.xml
@@ -55,18 +55,10 @@
                 android:elevation="10dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/red_note"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
-                    android:text="Note"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:visibility="invisible" />
-
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/enter_email"
@@ -107,7 +99,8 @@
                         android:layout_marginHorizontal="20dp"
                         android:layout_marginBottom="20dp"
                         android:fontFamily="@font/montserrat"
-                        android:hint="Mật khẩu của bạn" />
+                        android:hint="Mật khẩu của bạn"
+                        android:inputType="textPassword" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -124,6 +117,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat"
                         android:hint="Nhập lại mật khẩu"
+                        android:inputType="textPassword"
                         android:visibility="visible" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -136,6 +130,7 @@
                     android:background="@drawable/panel"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="@string/logup"
+                    android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:visibility="gone" />
 
@@ -148,7 +143,18 @@
                     android:background="@drawable/panel"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="@string/login_home"
+                    android:textAllCaps="false"
                     android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/red_note"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="Note"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
