--- a/app/src/main/res/layout/activity_admin_bus_operator_create.xml
+++ b/app/src/main/res/layout/activity_admin_bus_operator_create.xml
@@ -4,73 +4,197 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/adminBusOperatorCreateTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="CREATE NEW BUS OPERATOR"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:textSize="32sp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/adminBusOperatorListHeader"
+        android:layout_width="411dp"
+        android:layout_height="68dp"
+        android:background="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/adminBusOperatorNameCreateEt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/full_name"
-        android:background="@drawable/custom_form_input"
-        android:drawableStart="@drawable/baseline_person_32"
-        android:drawablePadding="10dp"
+        <ImageButton
+            android:id="@+id/adminBusOperatorListBackBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/baseline_arrow_back_10"
+            android:contentDescription="@string/back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/adminBusOperatorTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="Tạo mới nhà xe"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.063"
+            app:layout_constraintStart_toEndOf="@+id/adminBusOperatorListBackBtn"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="416dp"
+        android:layout_height="564dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorCreateTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorListHeader">
 
-    <EditText
-        android:id="@+id/adminBusOperatorPhoneCreateEt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:inputType="phone"
-        android:background="@drawable/custom_form_input"
-        android:drawableStart="@drawable/baseline_contact_phone_32"
-        android:drawablePadding="10dp"
-        android:hint="@string/phone_number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorNameCreateEt" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/adminBusOperatorImageCreateEt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:background="@drawable/custom_form_input"
-        android:drawableStart="@drawable/ic_baseline_image_24"
-        android:drawablePadding="10dp"
-        android:hint="@string/image"
-        app:layout_constraintEnd_toEndOf="@+id/adminBusOperatorPhoneCreateEt"
-        app:layout_constraintStart_toStartOf="@+id/adminBusOperatorPhoneCreateEt"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorPhoneCreateEt" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="566dp"
+                android:layout_margin="14dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cvAdminBusOperatorThumbnail"
+                    android:layout_width="382dp"
+                    android:layout_height="214dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/imageAdminBusOperatorThumbnail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        tools:srcCompat="@drawable/image_photo_svgrepo_com" />
+                </androidx.cardview.widget.CardView>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnAdminBusOperatorUpload"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/blue_panel"
+                    android:drawableStart="@drawable/baseline_file_upload_24"
+                    android:drawablePadding="5dp"
+                    android:fontFamily="@font/montserrat"
+                    android:padding="10dp"
+                    android:text="Chọn một ảnh"
+                    android:textAllCaps="false"
+                    android:textColor="#fff"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cvAdminBusOperatorThumbnail" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="Thông tin nhà xe"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btnAdminBusOperatorUpload" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutBusOperatorName"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="386dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:fontFamily="@font/montserrat"
+                    android:hint="Tên nhà xe"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/adminBusOperatorNameCreateEt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <EditText
+                    android:id="@+id/adminBusOperatorVNFlagEt"
+                    android:layout_width="90dp"
+                    android:layout_height="57dp"
+                    android:background="@drawable/custom_form_input"
+                    android:clickable="false"
+                    android:drawableStart="@drawable/vietnam_flag"
+                    android:drawablePadding="10dp"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:fontFamily="@font/montserrat"
+                    android:hint="+84"
+                    android:inputType="phone"
+                    android:padding="12dp"
+                    app:layout_constraintStart_toStartOf="@+id/layoutBusOperatorName"
+                    tools:layout_editor_absoluteY="403dp" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutBusOperatorPhone"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/montserrat"
+                    android:hint="Số điện thoại nhà xe"
+                    app:layout_constraintStart_toEndOf="@+id/adminBusOperatorVNFlagEt"
+                    app:layout_constraintTop_toBottomOf="@+id/layoutBusOperatorName">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/adminBusOperatorPhoneCreateEt"
+                        android:layout_width="289dp"
+                        android:layout_height="53dp"
+                        android:inputType="phone" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/adminBusOperatorCreateBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="CREATE"
+        android:text="Thêm nhà xe"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/yellow_panel"
+        android:paddingVertical="10dp"
+        android:fontFamily="@font/montserrat"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorImageCreateEt" />
+        app:layout_constraintTop_toBottomOf="@+id/view8" />
+
+    <View
+        android:id="@+id/view8"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginBottom="100dp"
+        android:layout_weight="1"
+        android:background="@color/light_gray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
