--- a/app/src/main/res/drawable/black_stroke_and_transparent_solid_panel.xml
+++ b/app/src/main/res/drawable/black_stroke_and_transparent_solid_panel.xml
@@ -4,10 +4,10 @@
     android:shape="rectangle"
     >
 
-    <corners android:radius="10dp" />
+    <corners android:radius="5dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="@android:color/darker_gray" />
     <solid android:color="@android:color/transparent" />
 
 </shape>
