--- a/app/src/main/res/layout/activity_thong_tin_ve.xml
+++ b/app/src/main/res/layout/activity_thong_tin_ve.xml
@@ -29,7 +29,7 @@
             app:srcCompat="@drawable/baseline_arrow_back_10" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/log_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
