--- a/app/src/main/res/layout/bus_detail.xml
+++ b/app/src/main/res/layout/bus_detail.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <ImageButton
-            android:id="@+id/back"
+            android:id="@+id/chi_tiet_ve_back"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="8dp"
@@ -30,7 +30,7 @@
             app:srcCompat="@drawable/baseline_arrow_back_10" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/log_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -39,7 +39,7 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/back"
+            app:layout_constraintStart_toEndOf="@+id/chi_tiet_ve_back"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
