--- a/app/src/main/res/layout/fragment_ticket_history.xml
+++ b/app/src/main/res/layout/fragment_ticket_history.xml
@@ -79,7 +79,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/log_test"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
