--- a/app/src/main/res/layout/item_danh_gia.xml
+++ b/app/src/main/res/layout/item_danh_gia.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView4"
+        android:id="@+id/normal_avt_user_review_card"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
@@ -30,8 +30,8 @@
         android:text="Nguyễn Minh Đức"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/cardView4"
-        app:layout_constraintTop_toTopOf="@+id/cardView4" />
+        app:layout_constraintStart_toEndOf="@+id/normal_avt_user_review_card"
+        app:layout_constraintTop_toTopOf="@+id/normal_avt_user_review_card" />
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -45,7 +45,7 @@
         android:scaleX="0.4"
         android:scaleY="0.4"
         android:secondaryProgressTint="@color/golden"
-        app:layout_constraintStart_toEndOf="@+id/cardView4"
+        app:layout_constraintStart_toEndOf="@+id/normal_avt_user_review_card"
         app:layout_constraintTop_toBottomOf="@+id/user_review_name" />
 
     <LinearLayout
@@ -55,7 +55,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView4">
+        app:layout_constraintTop_toBottomOf="@+id/normal_avt_user_review_card">
 
         <TextView
             android:id="@+id/user_review"
@@ -79,7 +79,7 @@
                 android:text="Đăng ngày " />
 
             <TextView
-                android:id="@+id/textView36"
+                android:id="@+id/ngay_dang_review"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -90,6 +90,7 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/fb_avt_user_review_card"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
