--- a/app/src/main/res/layout/activity_choose_drop_down_location.xml
+++ b/app/src/main/res/layout/activity_choose_drop_down_location.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChooseDropDownLocationActivity">
+    tools:context=".User.Screen.Booking.ChooseDropDownLocationActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headerContainer"
