--- a/app/src/main/res/layout/item_ve.xml
+++ b/app/src/main/res/layout/item_ve.xml
@@ -106,7 +106,6 @@
                         android:id="@+id/ngay_bat_dau"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="20dp"
                         android:fontFamily="@font/montserrat"
                         android:gravity="center"
                         android:text="24/04/2023"
@@ -170,6 +169,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -200,7 +200,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="visible">
 
                         <TextView
                             android:id="@+id/textView44"
