--- a/app/src/main/res/layout/item_ve.xml
+++ b/app/src/main/res/layout/item_ve.xml
@@ -129,7 +129,7 @@
 
                     <TextView
                         android:id="@+id/tinh_den"
-                        android:layout_width="wrap_content"
+                        android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat_bold"
                         android:text="Hồ Chí Minh"
@@ -143,14 +143,12 @@
                         android:gravity="center"
                         android:text="→"
                         android:textColor="@color/black"
-                        android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tinh_di"
-                        android:layout_width="wrap_content"
+                        android:layout_width="90dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:fontFamily="@font/montserrat_bold"
                         android:text="Nha Trang"
                         android:textColor="@color/black"
